# NyxGarantBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ТЗ_телеграм_бот_гарант_ФИНАЛ.docx
app/: banners.py  config.py  main.py
app/bot/: keyboards.py  states.py  utils.py
app/bot/handlers/: admin.py  deals.py  group_commands.py  menu.py  start.py  support.py
app/db/: models.py  session.py
app/services/: backups.py  group_provider.py  repositories.py
app/userbot/: client.py
