[project]
name = "nyx-garant-bot"
version = "0.1.0"
description = "Telegram escrow/guarantor bot with deal groups, roles, reports, reviews and banners"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7,<4.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "pydantic-settings>=2.2,<3.0",
    "telethon>=1.34,<2.0",
    "apscheduler>=3.10,<4.0",
    "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]
